rename to react-flexible-carousel

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cm-react-carousel",
+  "name": "react-flexible-carousel",
   "version": "0.0.1",
   "description": "",
   "main": "lib/index.js",
