--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-flexible-carousel",
-  "version": "0.0.1",
+  "version": "1.0.0-beta.1",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
