--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "react-flexible-carousel",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-beta.2",
   "description": "",
   "main": "lib/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CafeMap/react-flexible-carousel.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d lib"
