--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-flexible-carousel",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
   "repository": {
