--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "react-flexible-carousel",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.0",
+  "description": "react flexible carousel let you can easily control with style, rwd, lifecycle and dynamic path.",
+  "files": [
+    "es",
+    "lib",
+    "umd"
+  ],
   "main": "lib/index.js",
   "repository": {
     "type": "git",
@@ -9,7 +14,11 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d lib"
+    "build": "npm run build-cjs && npm run build-es",
+    "build-cjs": "rimraf lib && cross-env BABEL_ENV=cjs babel ./src -d lib",
+    "build-es": "rimraf es && cross-env BABEL_ENV=es babel ./src -d es",
+    "build-umd": "cross-env NODE_ENV=development webpack src/index.js umd/ReactFlexibleCarousel.js",
+    "build-min": "cross-env NODE_ENV=production webpack -p src/index.js umd/ReactFlexibleCarousel.min.js"
   },
   "keywords": [
     "react",
@@ -23,11 +32,13 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "cross-env": "^3.1.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "rimraf": "^2.5.4",
     "webpack": "beta"
   },
   "peerDependencies": {
-    "react": ">=0.14.0"
+    "react": "^0.14.0 || ^15.0.0"
   }
 }
