--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-flexible-carousel",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "react flexible carousel let you can easily control with style, rwd, lifecycle and dynamic path.",
   "files": [
     "es",
@@ -17,7 +17,7 @@
     "build": "npm run build-cjs && npm run build-es",
     "build-cjs": "rimraf lib && cross-env BABEL_ENV=cjs babel ./src -d lib",
     "build-es": "rimraf es && cross-env BABEL_ENV=es babel ./src -d es",
-    "build-umd": "cross-env NODE_ENV=development webpack src/index.js umd/ReactFlexibleCarousel.js",
+    "build-umd": "cross-env NODE_ENV=development webpack ./src/index.js umd/ReactFlexibleCarousel.js",
     "build-min": "cross-env NODE_ENV=production webpack -p src/index.js umd/ReactFlexibleCarousel.min.js"
   },
   "keywords": [
@@ -32,11 +32,17 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-plugin-transform-export-extensions": "^6.8.0",
+    "babel-plugin-transform-function-bind": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "cross-env": "^3.1.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "rimraf": "^2.5.4",
-    "webpack": "beta"
+    "webpack": "beta",
+    "webpack-fatigue-embrace": "^1.0.3"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0"
