--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/CafeMap/react-flexible-carousel.git"
   },
   "scripts": {
-    "test": "lint && jest",
+    "test": "npm run lint && npm run jest",
     "jest": "jest",
     "lint": "eslint ./src",
     "build": "npm run build-cjs && npm run build-es",
