--- a/package.json
+++ b/package.json
@@ -45,13 +45,12 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.7.1",
     "jest": "^17.0.3",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
+    "react-dom": "^15.4.1",
     "rimraf": "^2.5.4",
     "webpack": "beta",
     "webpack-fatigue-embrace": "^1.0.3"
   },
-  "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0"
-  }
+  "peerDependencies": {}
 }
