--- a/.eslintrc
+++ b/.eslintrc
@@ -34,11 +34,13 @@
     "react/prop-types": 0,
     "react/react-in-jsx-scope": 2,
     "import/extensions": 2,
+    "import/no-extraneous-dependencies": 0,
     "react/self-closing-comp": 2,
     "react/jsx-wrap-multilines": 2,
     "react/sort-comp": 0,
     "react/jsx-no-bind": 0,
     "react/jsx-boolean-value": 0,
+    "react/no-find-dom-node": 0,
 
     "quotes": [2, "single", "avoid-escape"],
     "jsx-quotes": [2, "prefer-single"],
